Make CachedZipConfig null-marked at runtime; retry download when IOException happens on deserialization (via Serializable/ObjectInput)